<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2010  Cyril Mottier & Ludovic Perrier
**              (http://www.digitbooks.fr/)
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_marginTop="8dp"
	android:layout_marginBottom="8dp">
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="15dp">

		<Button
			android:id="@+id/button1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/intent_1" />
			
		<Button
			android:id="@+id/button2"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/intent_2"
			android:paddingTop="5dp" />
			
		<Button
			android:id="@+id/button3"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/intent_3"
			android:paddingTop="5dp" />
			
		<Button
			android:id="@+id/button4"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/intent_4"
			android:paddingTop="5dip" />
			
		<Button
			android:id="@+id/button5"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/intent_5"
			android:paddingTop="5dip" />
			
		<Button
			android:id="@+id/button6"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/intent_6"
			android:paddingTop="5dip" />
			
		<Button
			android:id="@+id/button7"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/intent_7"
			android:paddingTop="5dip" />
			
		<Button
			android:id="@+id/button8"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/intent_8"
			android:paddingTop="5dip" />
			
		<Button
			android:id="@+id/button9"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/intent_9"
			android:paddingTop="5dip" />
			
	</LinearLayout>
</ScrollView>
