<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2010  Cyril Mottier & Ludovic Perrier
**              (http://www.digitbooks.fr/)
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#34577c"
	android:orientation="vertical"
	android:padding="5dp"
	android:gravity="center">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/radio_group_1_selection"
		android:id="@+id/choice_pi_mode"
		android:gravity="center"
		android:layout_marginBottom="5dip" />

	<EditText
		android:id="@+id/number_limit"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:hint="@string/decimal_limit"
		android:singleLine="true"
		android:inputType="number" />

	<RadioGroup
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:checkedButton="@+id/pi_mode"
		android:id="@+id/radio_group"
		android:layout_weight="1">

		<RadioButton
			android:text="@string/radio_group_1_java"
			android:id="@+id/mode_java"
			android:checked="true"
			style="?android:attr/textAppearanceSmall" />
			
		<RadioButton
			android:text="@string/radio_group_1_ndk"
			android:id="@+id/mode_ndk"
			style="?android:attr/textAppearanceSmall" />
			
	</RadioGroup>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<Button
			android:id="@+id/button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/launch"
			android:layout_centerInParent="true" />
			
		<ProgressBar
			android:id="@+id/progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="invisible"
			android:layout_centerInParent="true"
			android:padding="5dp" />
	</RelativeLayout>
	
</LinearLayout>
